# PP

CreateThread/: CreateThread.cpp  CreateThread.sln  CreateThread.vcxproj
CreateThread/CreateThread/x64/Debug/: CreateThread.exe.recipe  CreateThread.ilk  vc143.idb
CreateThread/CreateThread/x64/Debug/CreateThread.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CreateThread.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Lab_4/Blur/: Blur.sln  Blur.vcxproj  Blur.vcxproj.filters  CMakeLists.txt  main.cpp  run_all_tests.bat
Lab_4/Blur/Blur/x64/Debug/: Blur.exe.recipe  Blur.ilk  vc143.idb
Lab_4/Blur/Blur/x64/Debug/Blur.tlog/: Blur.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Lab_4/Blur/lab4_results/: test_summary.txt
Lab_4/Blur/lab4_results/logs/: test_a.csv  test_b.csv  test_c.csv  test_d.csv  test_e.csv  test_f.csv  test_g.csv  test_h.csv  test_i.csv
Lab_4/Blur/x64/Debug/: collect_stats.bat  run_tests.bat
Lab_5/Lab5/: Lab5.cpp  Lab5.sln  Lab5.vcxproj  run_two.bat
Lab_5/Lab5/Lab5/x64/Debug/: Lab5.exe.recipe  (+2 more)
Lab_5/Lab5_Mutex/: Lab5_Mutex.cpp  Lab5_Mutex.sln  Lab5_Mutex.vcxproj  Lab5_Mutex.vcxproj.filters  run_two.bat
Lab_6/Lab_6_1/: Lab_6_1.cpp  Lab_6_1.sln  Lab_6_1.vcxproj  run.bat
Lab_6/Lab_6_2/: Lab_6_2.cpp  Lab_6_2.sln  Lab_6_2.vcxproj  Lab_6_2.vcxproj.filters  run.bat
Lab_7/Lab_7_1/: Lab_7_1.sln  Program.cs
Lab_7/Lab_7_2/: Lab_7_2.sln  Program.cs
(+42 files in other folders)
